Add support for @PlistInclude and fix tests compile errors
Use `@PlistInclude` on a class or field to specify how empty or `null` field values should be serialized.